--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.16.3",
     "final-form": "^4.8.3",
     "lodash": "^4.17.10",
+    "markdown-it": "^8.4.2",
+    "markdown-it-highlightjs": "^3.0.0",
     "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
