--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.8",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "url-loader": "^2.0.0"
   }
 }
